--- a/cafeservellocontroler/cafeservellocontroler.csproj
+++ b/cafeservellocontroler/cafeservellocontroler.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\Img\**" />
+    <Content Remove="wwwroot\Img\**" />
+    <EmbeddedResource Remove="wwwroot\Img\**" />
+    <None Remove="wwwroot\Img\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="jQuery.InputMask" Version="5.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.20">
@@ -15,10 +22,6 @@
     </PackageReference>
     <PackageReference Include="Npgsql" Version="8.0.7" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\Img\" />
   </ItemGroup>
 
 </Project>
